# redwood

./: Cargo.toml  Makefile  README.md
.github/workflows/: release.yml  review.yml
etc/zsh-completion/: _redwood
src/: cli.rs  command.rs  conf.rs  context.rs  error.rs  git.rs  main.rs  tmux.rs  user.rs
