[package]
name = "redwood"
version = "0.8.1"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.16.1"
tmux_interface = {git = "https://github.com/AntonGepting/tmux-interface-rs", rev="d947e2a"}
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0"
clap = { version = "3.1.17", features = ["derive"] }
